# nrf52-heartrate

./: .gitmodules  README.md  docker-compose.yml
board/: .gitignore  CMakeLists.txt  README.md  flash.sh  main.c
board/include/: advertising.h  connection.h  heart_rate_service.h  leds.h  power_management.h  rng.h  sdk_config.h  timers.h
board/src/: advertising.c  connection.c  heart_rate_service.c  leds.c  power_management.c  rng.c  timers.c
paper/: .gitignore  Makefile  main.tex  references.bib  titlepage.tex
paper/images/draw/: architecture.drawio
router/: .gitignore  CMakeLists.txt  README.md
router/cmake/: FindBlueZ.cmake
router/src/: main.cpp
router/src/bt/: IOTBTClient.cpp  IOTBTClient.h  client.cpp  client.h
router/src/util/: logging.cpp  logging.h  logging_util.cpp  logging_util.h
router/src/web/: client.cpp  client.h
server/: .gitignore  bootstrap.js  package.json  webpack.config.js
server/migrations/: 002-create-measurements.sql  004-insert-devices.sql
server/src/: server.js
server/src/public/: index.html
server/src/public/assets/scripts/src/: index.js
web/: .editorconfig  Dockerfile  gulpfile.js  package.json
web/migrations/: 001-create-devices.sql  003-create-parameters.sql  004-insert-devices.sql  005-insert-parameters.sql
web/src/: server.js
web/src/public/: index.html
web/src/public/assets/scripts/src/: index.js
